feat: add web3 provider to back-end

--- a/back-end/.env.sample
+++ b/back-end/.env.sample
@@ -1,2 +1,14 @@
 # Express server port. Ex: 3001
 PORT=
+
+# Your MetaMask wallet private key (owner/admin)
+PRIVATE_KEY=
+
+# Your Metamask wallet public address (owner/admin)
+WALLET=
+
+# Your token smart contract address
+CONTRACT_ADDRESS=
+
+# Your blockchain node RPC server
+NODE_URL=
