feat: creates connection between front and back

--- a/front-end/.env.example
+++ b/front-end/.env.example
@@ -1,2 +1,2 @@
-# Your contract address at blockchain. Ex: 0x21d1900f306F5fe8306ff97a9cf117e3E0DA841E
-REACT_APP_CONTRACT_ADDRESS=
+# Your backend URL. Ex: http://localhost:3001
+REACT_APP_API_URL=
