--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "web3": "^4.5.0"
   },
